--- a/index.html
+++ b/index.html
@@ -359,7 +359,9 @@
                                 </div>
                                 <div>
                                     <h4 class="font-bold text-amber-900 mb-1">هاتف</h4>
-                                    <p class="text-gray-700" dir="ltr">+963 953 503 185, +963 957 595 601, +963 932 932 532</p>
+                                    <p class="text-gray-700" dir="ltr">+963 953 503 185 </p>
+                                    <p class="text-gray-700" dir="ltr">+963 957 595 601 </p>
+                                    <p class="text-gray-700" dir="ltr">+963 932 932 532 </p>
                                 </div>
                             </div>
                             
